# Backend-Default

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  TROUBLESHOOTING.md  all_output.txt  coverage.xml  coverage_missing.txt  coverage_output.txt  docker-build.bat  docker-build.sh  docker-compose.yml  fix_imports.py  fix_linting.py  fix_main_files.py  fix_syntax_errors.py  logs_tests.txt  pyproject.toml  repair_project.py  user.txt
api/: __init__.py
api/api-gateway/: main.py
api/api-gateway/middleware/: auth_middleware.py  circuit_breaker.py
api/api-gateway/utils/: service_registry.py
api/api_gateway/: main.py
api/api_gateway/middleware/: auth_middleware.py  circuit_breaker.py
api/api_gateway/utils/: service_registry.py
api/auth-service/app/: main.py
api/auth_service/app/: main.py
api/document-service/app/: main.py
api/document_service/app/: main.py
api/external-tools-service/app/: main.py
api/external_tools_service/app/: main.py
api/gateway/tests/: __init__.py
api/notification-service/app/: main.py
api/notification_service/app/: main.py
api/project-service/app/: main.py
api/project_service/app/: main.py
api/shared/dtos/: auth_dtos.py  document_dtos.py  external_tools_dtos.py  notification_dtos.py  project_dtos.py
api/shared/exceptions/: auth_exceptions.py  base_exceptions.py  document_exceptions.py  project_exceptions.py
api/shared/middleware/: auth_middleware.py
api/shared/models/: base.py  document.py  external_tools.py  notification.py  project.py  user.py
api/shared/utils/: db.py  jwt.py  rabbitmq.py  supabase.py
api/tests/auth/: test_auth_service.py
api/tests/document/: test_document_decorators.py  test_document_factory.py  test_document_service.py
api/tests/external_tools/: __init__.py  test_external_tools_service.py  test_oauth_adapter.py
api/tests/integration/: test_api_gateway.py  test_auth_service.py  test_document_service.py  test_external_tools_service.py  test_notification_service.py  test_project_service.py
sources/: DOCKER_BUILD_FIXES.md  LINTING_FIXES.md  PYLANCE_FIXES.md  PYLANCE_FLAKE8_FIXES.md  diagnose.py  fix_attribute_access.py  fix_datetime_utcnow.py
(+74 files in other folders)
