[project]
name = "backend-default"
version = "0.1.0"
description = "Backend default para proyectos orientados a microservicios"
authors = [
    {name = "Oyhs-co",email = "oyhsotelo@gmail.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "supabase (>=2.15.2,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
